# UniversalSpeech

./: .gitignore  CMakeLists.txt  CMakeSettings.json
examples/: CMakeLists.txt  test.c
include/: UniversalSpeech.h
src/: UniversalSpeech.c  private.h
src/windows/: cobra.c  com-interface.c  disphelper.c  disphelper.h  dolphin.c  encoding-conversion.c  encoding-conversion.h  engines.c  hook.c  jaws.c  misc.c  narrator.c  nvda.c  processlist.c  sapi.c  systemaccess.c  windows-eyes.c  zoomtext-guid.c  zoomtext.c  zoomtext.h
